<?xml version="1.0" encoding="utf-8"?>
<!--
  File:    bottom_nav_prosumer.xml
  Author:  Thisuri
  Created: 2026-10-04
  Purpose: The Prosumer's bottom-bar tabs. utils/BottomNav maps each id to its
           screen. A tab is only a shortcut: the API still judges every call.
-->
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home"
        android:title="@string/nav_home" />
    <item
        android:id="@+id/nav_bookings"
        android:icon="@drawable/ic_bookings"
        android:title="@string/nav_bookings" />
    <item
        android:id="@+id/nav_nodes"
        android:icon="@drawable/ic_nodes"
        android:title="@string/nav_nodes" />
    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/nav_profile" />
</menu>
